# kafka-streams-turtlebots4

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  pom.xml  setup_topics.sh
src/main/avro/: kafkaros-leds-value.avsc  roskafka-battery-value.avsc  roskafka-hazards-value.avsc
src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
src/main/java/de/hfu/: Ex.java  HazardProcessor.java  Main.java
src/main/resources/: application.yaml
src/test/java/de/hfu/: MessageConsumer.java  MessagePublisher.java  TestHazardDetection.java  X.java
src/test/python/: .gitignore  cons_test.py  consumer.py  create_schemas.py  models.py  prod_test.py  producer.py  pyproject.toml
