[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["sobottju <julian.benedikt.sobott@hs-furtwangen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
confluent-kafka = "^2.1.1"
requests = "^2.31.0"
fastavro = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
